<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="solutions.lhdev.app.app.RegisterActivity">

    <RelativeLayout
        android:id="@+id/content_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="solutions.lhdev.app.app.RegisterActivity"
        tools:showIn="@layout/activity_register">

        <TextView
            android:id="@+id/textViewTittleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/title_activity_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTittleLogin"
            android:layout_alignLeft="@+id/textViewTittleLogin"
            android:layout_alignStart="@+id/textViewTittleLogin"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:id="@+id/editTextName"
            android:layout_below="@+id/textViewTittleLogin"
            android:layout_centerHorizontal="true"
            android:hint="@string/names"
            android:ellipsize="start" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="17dp"
            android:id="@+id/editTextLastName"
            android:hint="@string/lastNames"
            android:ellipsize="start"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_alignStart="@+id/editTextName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/editTextLastName"
            android:layout_alignLeft="@+id/editTextPassword"
            android:layout_alignStart="@+id/editTextPassword"
            android:id="@+id/editTextEmail"
            android:layout_marginTop="17dp"
            android:hint="@string/user" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignLeft="@+id/editTextEmail"
            android:layout_alignStart="@+id/editTextEmail"
            android:layout_marginTop="17dp"
            android:id="@+id/editTextPhone"
            android:hint="@string/phone" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextRepeatPassword"
            android:ellipsize="start"
            android:hint="@string/repeatPassword"
            android:layout_below="@+id/editTextPassword"
            android:layout_alignLeft="@+id/editTextLastName"
            android:layout_alignStart="@+id/editTextLastName"
            android:layout_marginTop="17dp" />

        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:ellipsize="start"
        android:hint="@string/password"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignLeft="@+id/editTextRepeatPassword"
            android:layout_alignStart="@+id/editTextRepeatPassword" />

        <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/buttonRegister"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/editTextRepeatPassword"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
