<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="solutions.lhdev.app.app.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/textViewTittleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="60sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/editTextUser"
        android:layout_below="@+id/textViewTittleLogin"
        android:layout_centerHorizontal="true"
        android:hint="@string/user"
        android:ellipsize="start" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextPassword1"
        android:ellipsize="start"
        android:hint="@string/password" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/buttonRegister"
        android:labelFor="@+id/editTextName"
        android:layout_below="@+id/editTextPassword1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:text="@string/restartPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:id="@+id/textViewRestartPassword"
        android:clickable="true" />
</RelativeLayout>
